--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "@solidjs/router": "^0.10.5",
     "idb-keyval": "^6.2.1",
-    "solid-js": "^1.6.10"
+    "solid-js": "^1.8.7"
   }
 }
