--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.10.5",
+    "@supabase/supabase-js": "^2.39.7",
     "idb-keyval": "^6.2.1",
     "solid-js": "^1.8.7"
   }
