--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.5",
+    "typescript": "^5.3.3",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0",
     "vitest": "^1.3.1"
@@ -27,6 +27,6 @@
     "@solidjs/router": "^0.10.5",
     "@supabase/supabase-js": "^2.39.7",
     "idb-keyval": "^6.2.1",
-    "solid-js": "^1.8.7"
+    "solid-js": "^1.8.15",
   }
 }
