--- a/package.json
+++ b/package.json
@@ -17,16 +17,23 @@
     "jsdom": "^24.0.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0",
+    "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^1.3.1"
   },
   "dependencies": {
+    "@kobalte/core": "^0.12.2",
     "@solidjs/router": "^0.10.5",
     "@supabase/supabase-js": "^2.39.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "idb-keyval": "^6.2.1",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.8.15",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
