--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@supabase/supabase-js": "^2.39.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "fuse.js": "^7.0.0",
     "idb-keyval": "^6.2.1",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.16",
