build: actually use typechecking in prod builds
I just found, to my immense surprise, that I wasn't using typechecking
🤯. It turns out, that Vite only *transpiles* TS files, but doesn't do
typechecking. As they explain in  https://vitejs.dev/guide/features.html#transpile-only
this is by design. Transpiling works on file basis and is therefore very
fast, whereas typechecking can only work properly in the scope of the
whole project, which is much slower.

This of course totally makes sense for development, but I found that no
type checking is done even for prod build! Lol. So I looked into Vite's
docs and they recommend just doing `tsc` as part of the prod build.

When I did that, it was slow af, and I found that by default tsc
processes also node_modules, even with "exclude": ["node_modules"]. So I
have to use skipLibCheck to ensure this doesn't happen.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "isolatedModules": true,
     "paths": {
       "~/*": ["./src/*"]
-    }
+    },
+    // In order to prevent tsc from processing the node_modules folder
+    "skipLibCheck": true
   }
 }
