change: use standalone PWA interface
To make it look less like a browser thing.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,6 @@
   ],
   "start_url": "https://easy-words.vercel.app/vocabulary",
   "lang": "en",
-  "display": "minimal-ui",
+  "display": "standalone",
   "theme_color": "#16A34A"
 }
