--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "prepare": "husky"
   },
   "license": "MIT",
   "devDependencies": {
     "@solidjs/testing-library": "^0.8.6",
     "@testing-library/user-event": "^14.5.2",
     "autoprefixer": "^10.4.19",
+    "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.38",
     "prettier": "^2.8.8",
