--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches-ignore: [main]
 
-
 permissions:
   contents: write
 
@@ -21,6 +20,9 @@ jobs:
 
       - name: Install
         run: pnpm i
+
+      - name: Lint
+        run: pnpm eslint src
 
       - name: Build
         run: pnpm build
