--- a/package.json
+++ b/package.json
@@ -7,21 +7,25 @@
     "start": "vite",
     "dev": "vite",
     "build": "tsc && vite build",
+    "lint": "eslint src",
     "serve": "vite preview",
     "test": "vitest",
     "prepare": "husky"
   },
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@solidjs/testing-library": "^0.8.6",
     "@testing-library/user-event": "^14.5.2",
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.5.0",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.38",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.3",
+    "typescript-eslint": "^8.0.0-alpha.34",
     "vite": "^4.5.3",
     "vite-plugin-solid": "^2.10.2",
     "vite-tsconfig-paths": "^4.3.2",
