build: only do compile in pre-commit
Doing the whole prod build is probably overkill since it takes super
long and I anyway usually face TS errors, not bundling errors.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
+    "compile": "tsc",
     "build": "tsc && vite build",
     "lint": "eslint src",
     "serve": "vite preview",
