--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@eslint/js": "^9.5.0",
     "@solidjs/testing-library": "^0.8.6",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/user-event": "^14.5.2",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.5.0",
@@ -26,8 +27,8 @@
     "prettier": "^2.8.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.3",
-    "typescript-eslint": "^8.0.0-alpha.34",
-    "vite": "^4.5.3",
+    "typescript-eslint": "8.0.0-alpha.34",
+    "vite": "^5.3.3",
     "vite-plugin-solid": "^2.10.2",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
