--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@solidjs/testing-library": "^0.8.6",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/user-event": "^14.5.2",
+    "@types/lodash-es": "^4.17.12",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.5.0",
     "husky": "^9.0.11",
@@ -42,6 +43,7 @@
     "flag-icons": "^7.2.1",
     "fuse.js": "^7.0.0",
     "idb-keyval": "^6.2.1",
+    "lodash-es": "^4.17.21",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.16",
     "tailwind-merge": "^2.2.2",
