add: pie chart for results
Ofc I am using 3rd party for this - chart.js.

I removed the legend since it was needlessly taking up a lot of space
and will add my own the future.

I also fixed couple of bugs which were causing invalid words section to
be shown even if all results were correct.

For the future, I'd like to add some confetti, motivational feedback and
find a way to visualize the number of attempts for each word.

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@kobalte/core": "^0.13.3",
     "@solidjs/router": "^0.14.1",
     "@supabase/supabase-js": "^2.39.8",
+    "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "flag-icons": "^7.2.1",
