--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.5.0",
+    "@eslint/js": "^9.9.0",
     "@solidjs/testing-library": "^0.8.6",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/user-event": "^14.5.2",
     "@types/lodash-es": "^4.17.12",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.5.0",
+    "eslint": "^9.9.0",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.38",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.3",
-    "typescript-eslint": "8.0.0-alpha.41",
+    "typescript-eslint": "^8.1.0",
     "vite": "^5.3.3",
     "vite-plugin-solid": "^2.10.2",
     "vite-tsconfig-paths": "^4.3.2",
