--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint src",
     "serve": "vite preview",
     "test": "vitest",
-    "prepare": "husky"
+    "prepare": "husky",
+    "format": "prettier --write src"
   },
   "license": "MIT",
   "devDependencies": {
@@ -25,7 +26,8 @@
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.38",
-    "prettier": "^2.8.8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.3",
     "typescript-eslint": "^8.1.0",
