--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "vite": "^5.3.3",
     "vite-plugin-solid": "^2.10.2",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "vitest": "^2.1.3"
   },
   "dependencies": {
     "@kobalte/core": "^0.13.3",
+    "@solid-primitives/media": "^2.2.9",
     "@solidjs/router": "^0.14.1",
     "@supabase/supabase-js": "^2.39.8",
     "@tanstack/solid-query": "^5.51.21",
