--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "vite",
     "dev": "vite",
     "compile": "tsc",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && vite build --config vite.sw.config.ts",
     "lint": "eslint src",
     "serve": "vite preview",
     "test": "vitest",
@@ -21,6 +21,7 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/user-event": "^14.5.2",
     "@types/lodash-es": "^4.17.12",
+    "@vitejs/plugin-basic-ssl": "^2.1.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.9.0",
     "husky": "^9.0.11",
@@ -33,6 +34,7 @@
     "typescript-eslint": "^8.1.0",
     "vite": "^5.3.3",
     "vite-plugin-solid": "^2.10.2",
+    "vite-plugin-static-copy": "^3.1.1",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.1.3"
   },
@@ -40,11 +42,12 @@
     "@kobalte/core": "^0.13.10",
     "@solid-primitives/media": "^2.2.9",
     "@solidjs/router": "^0.14.1",
-    "@supabase/supabase-js": "^2.39.8",
+    "@supabase/supabase-js": "^2.55.0",
     "@tanstack/solid-query": "^5.51.21",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase": "^12.1.0",
     "flag-icons": "^7.2.1",
     "fuse.js": "^7.0.0",
     "idb-keyval": "^6.2.1",
